# Py8Web

./: .gitignore  dump-postgres-202302171937.sql
client_frontend/: index.html  list.html
client_frontend/css/: style.css
client_frontend/javascripts/: list.js  main.js
m01_01/: aggregation.py  composition.py
m01_01/D/: start_adapter.py
m01_01/I/: finish_adapter.py  start.py
m01_01/L/: finish.py  start.py
m01_01/O/: app.py  data.json  data.yaml  finish.py  start.py  storage.py
m01_01/S/: finish.py
m01_02/Behavioral/: observer.py
m01_02/Creational/: Singleton.py  classic_singleton.py  constructor.py  fabric.py
m01_02/Structural/: decorator.py
m07_01/: hw.db  pyproject.toml  seeds.py
m07_02/: config.ini  main.py  pyproject.toml  run_seed.py
m07_02/alembic/versions/: 568e9ad25eb8_add_contact_person_to_student.py  a94eb8c6b0bd_init.py
m07_02/database/: models.py
m07_02/seeds/: contacts.py  relationship.py  students.py  teachers.py
m08_01/: example_core.py  example_session.py  hw.db  pyproject.toml  test.json
m08_01/mongoengine_example/: create.py  get.py  models.py  remove.py  update.py
m08_01/pymongo_example/: app.py  test_connection.py
m08_02/: pyproject.toml
m08_02/alembic/: env.py
m08_02/celery/: app.py
m08_02/database/: db.py
m08_02/redis_example/: get_set.py  redis_cache.py
m08_02/seeds/: teachers.py
m08_02/simple_example/: cb.py  consumer.py  producer.py
m08_02/tasks/: consumer.py  producer.py
m09_01/: losses.json  pyproject.toml  war_info.py
m09_01/war_info/: links.json  losses.json
m09_01/war_info/war_info/: pipelines.py
m09_01/war_info/war_info/spiders/: get_links.py  get_losses.py
m09_02/: authors.json  main.py  pyproject.toml  quotes.json  spider.py
m10_01/instagram/: db.sqlite3
m10_02/instagram/: db.sqlite3
m11_02/src/database/: connect.py
m8_12_01/: docs.db  main.py  pyproject.toml  simple.db
m8_12_01/documentation/: auth.py  db.py  main.py
m8_12_01/refresh/: auth.py  db.py  main.py
m8_12_01/simple/: auth.py  db.py  main.py
m8_12_02/: main.py  pyproject.toml
m8_12_02/migrations/versions/: 516b4b64621c_add_roles_of_user.py
m8_12_02/src/database/: models.py
m8_12_02/src/repository/: users.py
m8_12_02/src/routes/: auth.py
m8_12_02/src/services/: auth.py
m8_13_01/postgres-data/global/: pg_control  pg_internal.init
m8_13_01/postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
m8_13_01_django/instagram/: db.sqlite3
m8_14_01/rest-api/: .coverage  test.db
m8_14_01/rest-api/tests/: conftest.py  test_route_cats.py
websocket-chat/: LICENSE  README.md  pyproject.toml
websocket-chat/app/: database.py  main.py  models.py
websocket-chat/app/core/: config.py
websocket-chat/app/templates/: base.html
websocket-chat/app/templates/pages/: chat.html  index.html  login.html  signin.html
websocket-chat/app/templates/static/js/: main.js
(+56 files in other folders)
