[tool.poetry]
name = "m08-01"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m08_01"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^1.4.46"
faker = "^16.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
