[tool.poetry]
name = "m08-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m08_02"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.4.2"
redis-lru = "^0.1.2"
pika = "^1.3.1"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
