[tool.poetry]
name = "m09-02"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"
packages = [{include = "m09_02"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.7.1"
selenium = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
